fixed too long description by adding a max-width with a module.css

--- a/src/components/Agency/AgencyList.module.css
+++ b/src/components/Agency/AgencyList.module.css
@@ -1,7 +1,3 @@
 .agencyDescription {
-    /* width: 200px; */
-    /* text-overflow: ellipsis;
-    display: block; */
-    /* padding-top: 24px; */
     max-width: 200px;
 }
